resource.tf
resource "aws_security_group" "web_sg" {
  name        = "web-server-sg"
  description = "Allow HTTP traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow HTTP traffic from anywhere"
    from_port   = var.server_http_port
    to_port     = var.server_http_port
    protocol    = "tcp"
    cidr_blocks = jsondecode(data.http.github_ips.response_body).actions
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

resource "aws_instance" "example" {
  instance_type               = "t2.micro"
  ami                         = "ami-02b8269d5e85954ef"
  associate_public_ip_address = true

  root_block_device {
    encrypted   = true
    volume_size = 8
    volume_type = "gp2"
  }

  subnet_id = aws_subnet.main.id

  vpc_security_group_ids = [aws_security_group.web_sg.id]

  metadata_options {
    http_tokens   = "required"
    http_endpoint = "enabled"
  }

  user_data = <<-EOF
              #!/bin/bash
              yum update -y
              echo "Hello, World!" > index.html
              python3 -m http.server ${var.server_http_port} &
              EOF
  tags = {
    Name = "ExampleInstance"
  }
}

# tfsec:ignore:aws-ec2-require-vpc-flow-logs-for-all-vpcs
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "main-vpc"
  }
}

resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = false
  availability_zone       = "ap-south-1a"

  tags = {
    Name = "main-public-subnet"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
  }
}

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "main-public-rt"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.rt.id
}

data "http" "github" {
  url="https://api.github.com/meta"
  request_headers = {
    Accept     = "application/vnd.github.v3+json"
    "User-Agent" = "Terraform-HTTP-Module"
  }
}

output "instance_public_ip" {
  description = "Public IP address of the web server."
  value       = aws_instance.example.public_ip
}

output "server_port" {
  description = "The port the server is running on."
  value       = var.server_http_port
}
